k8s/kong-backup/api-gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress
  annotations:
    kubernetes.io/ingress.class: "kong"
    konghq.com/strip-path: "true"
    konghq.com/plugins: cors
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
    - hosts:
        - api.blinddateg3.xyz
      secretName: blinddateg3-api-tls
  rules:
    - host: api.blinddateg3.xyz
    - http:
        paths:
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 3002
          - path: /post
            pathType: Prefix
            backend:
              service:
                name: post-service
                port:
                  number: 3003
          - path: /comment
            pathType: Prefix
            backend:
              service:
                name: comment-service
                port:
                  number: 3004
